@@ -20,4 +20,4 @@ paolo-losi <https://github.com/paolo-losi>
 yuriykashin <https://github.com/yuriykashin>
 foXes68 <https://github.com/foXes68>
 babca <https://github.com/babca>
-
+strokovnjaka <https://github.com/strokovnjaka>
