@@ -1,10 +1,10 @@
 [metadata]
-name = python-gsmmodem-new
+name = python-gsmmodem-stk
 description = Control an attached GSM modem: send/receive SMS messages, handle calls, etc
 license = LGPLv3+
 author = Francois Aucamp
 author_email = francois.aucamp@gmail.com
-url = https://github.com/babca/python-gsmmodem
+url = https://github.com/strokovnjaka/python-gsmmodem
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 classifiers =
